added documentation link to Cargo.toml, added logo to html docs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2024"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/vlams1/resonite-core"
+documentation = "https://docs.rs/resonite-core"
 categories = ["game-development", "encoding", "parsing"]
 keywords = ["resonite", "AnimX", "AnimJ"]
 
